# LiveChatApp

./: CMakeLists.txt  README.md  index.html  main.cpp  package-lock.json  package.json  test.md
lepet/: .gitignore  manage.py  requirements.txt
lepet/chats/: admin.py  models.py
lepet/chats/api_chats/: serializers.py  urls.py  views.py
lepet/chats/migrations/: 0001_initial.py  0002_rename_timestamp_message_created_at.py
lepet/lepet/: api_urls.py  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
lepet/users/: README(en).md  README(ua).md  apps.py  models.py  signals.py  twilio_auth.py
lepet/users/api_users/: serializers.py  urls.py  views.py
lepet/users/migrations/: 0001_initial.py  0002_user_bio.py
src/: App.css  App.jsx  App.tsx  index.css  main.tsx
src/components/Chat/: Chat.tsx  chat.css
src/components/Detail/: Detail.tsx  detail.css
src/components/Login/: Login.jsx  SignUp.tsx  SingIn.tsx  login.css
src/components/Login/blocks/: Logout.tsx
src/components/MainPage/: MainPage.tsx
src/components/MainPage/Chat/: Chat.tsx  chat.css
src/components/MainPage/Saidbar/: Sidebar.tsx
src/components/MainPage/Saidbar/ChatList/: chatlist.css
src/components/Saitbar/: Saitbar.tsx  saitbar.css
src/components/Saitbar/ChatList/: ChatList.jsx  ChatList.tsx  chatlist.css
src/components/Saitbar/UserInfo/: UserInfo.tsx  userInfo.css
src/components/login/: Login.tsx  Registration.tsx
src/components/login/blocks/: Input.tsx  Logout.tsx
src/context/: Context.tsx
src/services/interpretator/: axios.js
(+6 files in other folders)
